# race-bib-recognition-platform

./: .env.example  .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml  rbp_codex_implementation_spec.md
docs/: index.md  roadmap.md
docs/architecture/: api.md  kafka.md  mongodb.md  observability.md  overview.md  pipeline.md
docs/development/: codex-rules.md  coding-standards.md  local-kubernetes.md  local-setup.md  private-dataset-and-cvat.md  testing.md
docs/operations/: cloud-deployment.md  runbooks.md  troubleshooting.md
docs/services/: bib-detection-service.md  crop-service.md  ingest-api.md  linking-service.md  normalization-service.md  ocr-service.md
infra/docker/: python-service.Dockerfile
infra/docker-compose/: docker-compose.yml  prometheus.yml
infra/k8s/: api-deployment.yaml  configmap.yaml  data-services.yaml  namespace.yaml  observability.yaml  secrets.example.yaml  worker-deployments.yaml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
libs/rbp-contracts/: pyproject.toml
models/registry/: bib-yolo-v3-mps-2.yaml
samples/: README.md
scripts/: cloud_preflight.py  demo_local_pipeline.py  deploy_gcp.py  evaluate_model.py  generate_dataset_manifest.py  reprocess_job.py  run_docker_compose_e2e.py  validate_local_kubernetes.py
src/rbp_core/: __init__.py  analytics.py  artifact_store.py  cloud_storage.py  event_bus.py  kafka_bus.py  model_evaluation.py  mongo_state.py  observability.py  realtime.py  reliability.py  reliable_processor.py  reprocessing.py  runtime_factory.py  state.py  training.py  (+1 more)
(+46 files in other folders)
